@@ -66,3 +66,4 @@ Added a new monitor type for Dovecot.
 Added an option to the SSH monitor type for a port number.
 ---- Changes since 1.490 ----
 Added a new monitor type for detecting large directories.
+Added a button to the main page for refreshing only selected monitors, thanks to Michael Mansour.
